DIAC-86 changing DocumentWithMetadata an time field to datetime and setting to eu/london time